--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -77,7 +77,7 @@ jobs:
                 -noBuildNative
                 /p:OnlyPackPlatformSpecificPackages=true
         displayName: Build ARM64 shared fx
-      - script: .\eng\build.cmd -ci --arch arm64 -noBuildRepoTasks -NoRestore -test -all
+      - script: .\eng\build.cmd -ci -arch arm64 -noBuildRepoTasks -NoRestore -test -all
                 -projects eng\helix\helix.proj
                 /p:IsHelixJob=true /p:RunTemplateTests=true
                 /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
