--- a/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/ReactRedux-CSharp/ClientApp/package.json
+++ b/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/ReactRedux-CSharp/ClientApp/package.json
@@ -3,36 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "~4.6.1",
+    "jquery": "~3.6.0",
     "connected-react-router": "6.5.2",
     "history": "4.10.1",
-    "jquery": "^3.5.1",
-    "merge": "^2.1.1",
-    "popper.js": "^1.16.0",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-redux": "7.1.1",
-    "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
-    "reactstrap": "8.1.1",
-    "redux": "4.0.4",
-    "redux-thunk": "2.3.0",
-    "svgo": "1.3.0"
+    "merge": "2.1.1",
+    "popper.js": "^1.16.1",
+    "react": "~16.14.0",
+    "react-dom": "~16.14.0",
+    "react-redux": "~7.2.6",
+    "react-router": "~5.2.1",
+    "react-router-dom": "~5.3.0",
+    "reactstrap": "~8.10.1",
+    "redux": "4.1.2",
+    "redux-thunk": "2.4.1"
   },
   "devDependencies": {
-    "@types/history": "4.7.3",
+    "@types/history": "4.7.10",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.6",
-    "@types/react": "16.9.9",
-    "@types/react-dom": "16.9.2",
-    "@types/react-redux": "7.1.5",
-    "@types/react-router": "5.1.2",
-    "@types/react-router-dom": "5.1.0",
-    "@types/reactstrap": "8.0.6",
+    "@types/react": "~16.9.14",
+    "@types/react-dom": "~16.9.14",
+    "@types/react-redux": "~7.1.22",
+    "@types/react-router": "~5.1.17",
+    "@types/react-router-dom": "~5.3.0",
+    "@types/reactstrap": "~8.7.2",
     "cross-env": "6.0.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "nan": "^2.14.1",
-    "react-scripts": "^4.0.3",
+    "nan": "^2.15.0",
+    "react-scripts": "^5.0.0",
     "typescript": "3.6.4"
   },
   "scripts": {
