--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -78,8 +78,8 @@ jobs:
                 /p:OnlyPackPlatformSpecificPackages=true
         displayName: Build ARM64 shared fx
       - script: .\eng\build.cmd -ci -arch arm64 -noBuildRepoTasks -NoRestore -test -all
-                -projects eng\helix\helix.proj
-                /p:IsHelixJob=true /p:RunTemplateTests=true
+                -projects eng\helix\helix.proj /p:IsHelixWindowsArmCheck=true
+                /p:IsHelixJob=true  /p:RunTemplateTests=true
                 /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
         displayName: Run build.cmd helix target
         env:
