--- a/.github/ISSUE_TEMPLATE/20_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/20_feature_request.yml
@@ -15,10 +15,8 @@ body:
 - type: textarea
   attributes:
     label: Is your feature request related to a problem? Please describe the problem.
-    description: |
-      A clear and concise description of what the problem is.
-      
-      Example: I am trying to do [...] but [...]
+    description: A clear and concise description of what the problem is.
+    placeholder: I am trying to do [...] but [...]
   validations:
     required: false
 - type: textarea
