Revert "Merged PR 20647: Fix more build errors"
This reverts commit addab21ac2d15bd5230a60b0573e2557d520fc15.

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -658,7 +658,7 @@ stages:
       parameters:
         condition: ne(variables['SkipTests'], 'true')
         jobName: MacOS_Test
-        jobDisplayName: "Test: macOS x64"
+        jobDisplayName: "Test: macOS 10.14"
         agentOs: macOS
         timeoutInMinutes: 240
         isTestingJob: true
