--- a/.azure/pipelines/quarantined-pr.yml
+++ b/.azure/pipelines/quarantined-pr.yml
@@ -95,7 +95,7 @@ jobs:
 - template: jobs/default-build.yml
   parameters:
     jobName: MacOS_Quarantined_Test
-    jobDisplayName: "Tests: macOS x64"
+    jobDisplayName: "Tests: macOS 10.14"
     agentOs: macOS
     timeoutInMinutes: 120
     isTestingJob: true
