Automatically pack when building in CI builds - remove `-pack` from build.* commands in YAML files
nit: remove `-noRestore` when `-noBuild` specified; `-noRestore` is the default

--- a/.azure/pipelines/benchmarks.yml
+++ b/.azure/pipelines/benchmarks.yml
@@ -12,7 +12,7 @@ jobs:
     jobName: Windows_Build
     jobDisplayName: "Build: Windows"
     agentOs: Windows
-    buildArgs: -all -pack
+    buildArgs: -all
     artifacts:
     - path: artifacts/
       includeForks: true
