--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -170,7 +170,6 @@ stages:
       - script: ./eng/build.cmd
                 -ci
                 -arch x64
-                -pack
                 -all
                 $(_BuildArgs)
                 $(_InternalRuntimeDownloadArgs)
@@ -183,7 +182,6 @@ stages:
                 -ci
                 -noBuildRepoTasks
                 -arch x86
-                -pack
                 -all
                 -noBuildJava
                 -noBuildNative
@@ -198,7 +196,6 @@ stages:
                 -ci
                 -arch arm64
                 -sign
-                -pack
                 -noBuildJava
                 -noBuildNative
                 /p:DotNetSignType=$(_SignType)
@@ -213,7 +210,6 @@ stages:
         - script: .\src\SiteExtensions\build.cmd
                   -ci
                   -noBuildRepoTasks
-                  -pack
                   -noBuildDeps
                   -noBuildNative
                   $(_BuildArgs)
@@ -228,7 +224,6 @@ stages:
                 -noBuildRepoTasks
                 -noBuildNative
                 -noBuild
-                -noRestore
                 -sign
                 /p:DotNetSignType=$(_SignType)
                 $(_BuildArgs)
@@ -293,7 +288,6 @@ stages:
       buildArgs:
         -arch arm
         -sign
-        -pack
         -noBuildNodeJS
         -noBuildJava
         -binaryLog
@@ -337,7 +331,6 @@ stages:
       agentOs: macOs
       buildArgs:
         --arch arm64
-        --pack
         --all
         --no-build-nodejs
         --no-build-java
@@ -367,7 +360,6 @@ stages:
       jobDisplayName: "Build: macOS x64"
       agentOs: macOs
       buildArgs:
-        --pack
         --all
         --no-build-nodejs
         --no-build-java
@@ -401,7 +393,6 @@ stages:
       - script: ./eng/build.sh
             --ci
             --arch x64
-            --pack
             --all
             --no-build-nodejs
             --no-build-java
@@ -446,7 +437,6 @@ stages:
       agentOs: Linux
       buildArgs:
         --arch arm
-        --pack
         --all
         --no-build-nodejs
         --no-build-java
@@ -478,7 +468,6 @@ stages:
       buildArgs:
         --arch arm64
         --all
-        --pack
         --no-build-nodejs
         --no-build-java
         -p:OnlyPackPlatformSpecificPackages=true
@@ -510,7 +499,6 @@ stages:
       buildArgs:
         --arch x64
         --os-name linux-musl
-        --pack
         --all
         --no-build-nodejs
         --no-build-java
@@ -545,7 +533,6 @@ stages:
       buildArgs:
         --arch arm
         --os-name linux-musl
-        --pack
         --all
         --no-build-nodejs
         --no-build-java
@@ -579,7 +566,6 @@ stages:
       buildArgs:
         --arch arm64
         --os-name linux-musl
-        --pack
         --all
         --no-build-nodejs
         --no-build-java
@@ -612,7 +598,7 @@ stages:
         isAzDOTestingJob: true
         # Just uploading artifacts/logs/ files can take 15 minutes. Doubling the cancel timeout for this job.
         cancelTimeoutInMinutes: 30
-        buildArgs: -all -pack -test -binaryLog /p:SkipHelixReadyTests=true /p:SkipIISNewHandlerTests=true /p:SkipIISTests=true
+        buildArgs: -all -test -binaryLog /p:SkipHelixReadyTests=true /p:SkipIISNewHandlerTests=true /p:SkipIISTests=true
                    /p:SkipIISExpressTests=true /p:SkipIISNewShimTests=true /p:RunTemplateTests=false
                    $(_InternalRuntimeDownloadArgs)
         beforeBuild:
@@ -681,7 +667,7 @@ stages:
         timeoutInMinutes: 240
         steps:
         # Build the shared framework
-        - script: ./eng/build.cmd -ci -nobl -all -pack -arch x64
+        - script: ./eng/build.cmd -ci -nobl -all -arch x64
                   /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log $(_InternalRuntimeDownloadArgs)
           displayName: Build shared fx
         - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -restore -noBuild -noBuildNative -projects src/Grpc/**/*.csproj
