Undo optional changes - subset of #39568 - set `$(IsTargetingPackBuilding)` to `true` unconditionally - leave all _use_ of `$(IsTargetingPackBuilding)`

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -138,6 +138,7 @@
     <TargetingPackName>Microsoft.AspNetCore.App.Ref</TargetingPackName>
     <RuntimeInstallerBaseName>aspnetcore-runtime</RuntimeInstallerBaseName>
     <TargetingPackInstallerBaseName>aspnetcore-targeting-pack</TargetingPackInstallerBaseName>
+    <IsTargetingPackBuilding>true</IsTargetingPackBuilding>
 
     <!--
       Archives and installers using this prefix are intended for internal use only.
