--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -768,7 +768,8 @@ stages:
           # In addition to the dependencies above, ensure the build was successful overall.
           - Source_Build_Managed
         pool:
-          vmImage: windows-latest
+          name: NetCore1ESPool-Svc-Internal
+          demands: ImageOverride -equals Build.Server.Amd64.VS2019
         publishUsingPipelines: ${{ variables._PublishUsingPipelines }}
         enablePublishBuildArtifacts: true # publish artifacts/log files
 
