!fixup! Use non-`-Svc` pool - fix cut 'n paste error in ccc66f977b5

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -747,7 +747,7 @@ stages:
               - Helix_x64
           - Source_Build_Managed
         pool:
-          name: NetCore1ESPool-Svc-Internal
+          name: NetCore1ESPool-Internal
           demands: ImageOverride -equals Build.Server.Amd64.VS2019
         publishUsingPipelines: ${{ variables._PublishUsingPipelines }}
         enablePublishBuildArtifacts: true # publish artifacts/log files
