--- a/src/Components/Web.JS/package.json
+++ b/src/Components/Web.JS/package.json
@@ -15,8 +15,7 @@
     "lint": "eslint -c ./src/.eslintrc.js --ext .ts ./src",
     "build": "yarn run build:debug && yarn run build:production",
     "build:debug": "cd src && node ../node_modules/webpack-cli/bin/cli.js --mode development --config ./webpack.config.js",
-    "build:production": "cd src && node ../node_modules/webpack-cli/bin/cli.js --mode production --config ./webpack.config.js",
-    "test": "jest"
+    "build:production": "cd src && node ../node_modules/webpack-cli/bin/cli.js --mode production --config ./webpack.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -25,18 +24,14 @@
     "@microsoft/signalr": "link:../../SignalR/clients/ts/signalr",
     "@microsoft/signalr-protocol-msgpack": "link:../../SignalR/clients/ts/signalr-protocol-msgpack",
     "@types/dotnet": "./@types/dotnet",
-    "@types/jest": "^27.4.0",
     "@types/jsdom": "^16.2.14",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "babel-jest": "^27.4.6",
     "eslint": "^8.6.0",
     "eslint-plugin-header": "^3.1.1",
     "inspectpack": "^4.7.1",
-    "jest": "^27.4.7",
     "rimraf": "^3.0.2",
     "terser": "^5.10.0",
-    "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "webpack": "^5.66.0",
