--- a/.github/ISSUE_TEMPLATE/10_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/10_bug_report.yml
@@ -13,7 +13,7 @@ body:
 - type: checkboxes
   attributes:
     label: Is there an existing issue for this?
-    description: Please search to see if an issue already exists for the bug you encountered (https://github.com/dotnet/aspnetcore/issues).
+    description: Please search to see if an issue already exists for the bug you encountered ([https://github.com/dotnet/aspnetcore/issues](https://github.com/dotnet/aspnetcore/issues?q=is%3Aissue)).
     options:
     - label: I have searched the existing issues
       required: true
