--- a/src/Security/test/AuthSamples.FunctionalTests/AuthSamples.FunctionalTests.csproj
+++ b/src/Security/test/AuthSamples.FunctionalTests/AuthSamples.FunctionalTests.csproj
@@ -1,23 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>$(DefaultNetCoreTargetFramework)</TargetFramework>
     <IsSampleProject>false</IsSampleProject>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
-  <Import Project="$(MvcTestingTargets)" Condition="'$(MvcTestingTargets)' != ''" />
-
   <ItemGroup>
     <ProjectReference Include="$(RepoRoot)src\Hosting\Server.IntegrationTesting\src\Microsoft.AspNetCore.Server.IntegrationTesting.csproj" />
-    <ProjectReference Include="..\..\samples\Cookies\Cookies.csproj" />
-    <ProjectReference Include="..\..\samples\ClaimsTransformation\ClaimsTransformation.csproj" />
-    <ProjectReference Include="..\..\samples\CustomAuthorizationFailureResponse\CustomAuthorizationFailureResponse.csproj" />
-    <ProjectReference Include="..\..\samples\CustomPolicyProvider\CustomPolicyProvider.csproj" />
-    <ProjectReference Include="..\..\samples\DynamicSchemes\DynamicSchemes.csproj" />
-    <ProjectReference Include="..\..\samples\Identity.ExternalClaims\Identity.ExternalClaims.csproj" />
-    <ProjectReference Include="..\..\samples\PathSchemeSelection\PathSchemeSelection.csproj" />
-    <ProjectReference Include="..\..\samples\StaticFilesAuth\StaticFilesAuth.csproj" />
+    <ProjectReference Include="..\..\samples\*\*.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,4 +18,6 @@
     <Reference Include="AngleSharp" />
     <Reference Include="System.Net.Http" />
   </ItemGroup>
+
+  <Import Project="$(MvcTestingTargets)" Condition="'$(MvcTestingTargets)' != ''" />
 </Project>
